# quantedge-ai-futures-insights

./: .env.example  .gitignore  README.md  Untitled
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_ohlcv_bars.py
backend/src/quantedge_backend/: __init__.py  main.py  settings.py
backend/src/quantedge_backend/api/: __init__.py  deps.py  security.py  ws.py
backend/src/quantedge_backend/api/v1/: __init__.py  health.py  insights.py  market.py
backend/src/quantedge_backend/db/: __init__.py  bars_repo.py  migrate.py  models.py  session.py
backend/src/quantedge_backend/features/: __init__.py  candles.py  indicators.py  levels.py  snapshot.py
backend/src/quantedge_backend/llm/: __init__.py  insight_service.py  safety.py  schemas.py
backend/src/quantedge_backend/market/: __init__.py  aggregate.py  mock_provider.py  orchestrator.py  redis_cache.py  stream.py  time_bucketing.py  types.py
backend/src/quantedge_backend/observability/: __init__.py  logging_config.py  metrics.py  middleware.py  security_headers.py
backend/src/quantedge_backend/rag/: __init__.py  chroma_store.py  chunking.py  cli.py  ingest.py  retrieve.py
backend/tests/: conftest.py  test_aggregate.py  test_features.py  test_health.py  test_insight_mock.py  test_llm_schemas.py  test_migrate.py  test_rag_chunking.py  test_security.py  test_security_headers.py
contracts/: README.md  insight-payload.schema.json  market-features.schema.json  ohlcv-bar.schema.json
(+26 files in other folders)
