[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "quantedge-backend"
version = "0.1.0"
description = "QuantEdge AI FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic-settings>=2.6,<3",
    "redis>=5,<6",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "numpy>=1.26,<3",
    "chromadb>=0.5.20,<1",
    "openai>=1.54,<2",
    "structlog>=24.4,<26",
]

[project.scripts]
quantedge-ingest = "quantedge_backend.rag.cli:main"

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1",
    "fakeredis>=2.23,<3",
    "httpx>=0.27,<1",
    "mypy>=1.13,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quantedge_backend"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
packages = ["quantedge_backend"]
